--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://belenjn.github.io/portfolio",
+  "homepage": "https://portfolio.belenjn.com/",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
