--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://portfolio.belenjn.com/",
+  "homepage": "www.belenjn.com",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
