--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "belenjn.com",
+  "homepage": "https://belenjn.github.io/portfolio/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
